bad/add_invalid_types_bool_class.example_compiler_output
ERROR
[1mbad/add_invalid_types_bool_class.lat:6:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `boolean` and `X`[m
	true + x;
	     [1;32m^[m
